--- a/nginx-error-log.bot/main.yml
+++ b/nginx-error-log.bot/main.yml
@@ -9,11 +9,11 @@
           - public
           - webpickle
           - jar
-            #- muiecatd
+            #update with your list of relevant routes for your app
 
   
   tasks:
-  - name: get the root of the request
+  - name: get the route of the request
     shell: sed -n -e  '/{{timestamp}}/,$p' /var/log/nginx/error.log | awk -F \" '{print $4}' | awk '{print $2}' | awk -F / '{print $2}'
     register: req_roots
     when: picklebot["variables"]["state"] == "failed"
@@ -21,5 +21,14 @@
   - name: check if errored roots are valid ones
     picklebot: resolve
     when: picklebot["variables"]["state"] == "succeeded"  or valid_roots|intersect(req_roots.stdout_lines)|count == 0 
+
+  - name: get the log content from the time of alert
+    shell: sed -n -e  '/{{timestamp}}/,$p' /var/log/nginx/error.log
+    register: log_content
+    when: picklebot["variables"]["state"] != "succeeded"  or valid_roots|intersect(req_roots.stdout_lines)|count != 0 
+
+  - name: add the log content from the time of alert to the incident note
+    picklebot: note={{log_content.stdout}}
+    when: picklebot["variables"]["state"] != "succeeded"  or valid_roots|intersect(req_roots.stdout_lines)|count != 0 
 
 
